agrege suscribcion, cambie la cabecera maestra y puse el texto azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
 <div id="container" >
     <div id="cabecera" >
         Hyperblog 
-        <span id="tagline">Tu blog de confianza</span>
+        <span id="tagline">Tu blog de maestro</span>
     </div>
     <div id="post" >
         <h1>Aqui vamos a hacer un blog post</h1>
@@ -20,6 +20,7 @@
             execto si eres un rockstar pero estadisticamente no lo eres
             ... por ahora.
         </p>
+        <p>suscribete y dale like</p>
     </div>
 </div>
 </body>
