--- a/blogpost.html
+++ b/blogpost.html
@@ -22,6 +22,9 @@
         </p>
         <p>suscribete y dale like</p>
     </div>
+    <footer>
+        <p>cesar estuvo aqui en el footer siguiendo las instrucciones del fredy vergas</p>
+    </footer>
 </div>
 </body>
 </html>
