--- a/blogpost.html
+++ b/blogpost.html
@@ -18,7 +18,7 @@
         <p>los blog son la mejor forma de compartir
             imformacion y tus ideas mucho mas que ir a youtube
             excepto si eres un rockstar pero estadisticamente no lo eres
-            ... por ahora.
+            ... por ahora me comi un pollo.
         </p>
         <p>suscribete y dale like</p>
     </div>
