cambio de titulo para probar un diploy

--- a/blogpost.html
+++ b/blogpost.html
@@ -13,7 +13,7 @@
         <span id="tagline">Tu blog de cabecera</span>
     </div>
     <div id="post" >
-        <h1>Aqui vamos a hacer un blog post</h1>
+        <h1>Aqui&iacute: inicia la historia de un gran proyecto</h1>
         <p>y este es el parrafo de inicio</p>
         <p>los blog son la mejor forma de compartir
             imformacion y tus ideas mucho mas que ir a youtube
