Agrege unas imagenes al blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -15,6 +15,7 @@
     <div id="post" >
         <h1>Aqui vamos a hacer un blog post</h1>
         <p>y este es el parrafo de inicio</p>
+        <p> <img src="../Documents/git y github/grupo-platzi.jpg" width="100%" alt=""> </p>
         <p>los blog son la mejor forma de compartir
             imformacion y tus ideas mucho mas que ir a youtube
             excepto si eres un rockstar pero estadisticamente no lo eres
