--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
 <div id="container" >
     <div id="cabecera" >
         Hyperblog 
-        <span id="tagline">Tu blog de cabecera</span>
+        <span id="tagline">Tu blog de confianza</span>
     </div>
     <div id="post" >
         <h1>Aqui&iacute: inicia la historia de un gran proyecto</h1>
